# catching-bad-files_vala

./: CBF  CBF.vala  README.md  compile.txt  log  log.txt  main  main.vala  md5-compare  md5-compare.c  md5-compare.h  md5-compare.vala  md5-compare.vapi  meson.build  project
src/: CBF.vala  md5-compare.vala
